@@ -1,5 +1,13 @@
 2018-01-17  Ryosuke Niwa  <rniwa@webkit.org>
 
+        Unreviewed build fixes in TestGroupResultsViewer.
+
+        * public/v3/components/test-group-results-viewer.js:
+        (TestGroupResultsViewer.prototype.render): _renderCurrentMetricsLazily was never called.
+        (TestGroupResultsViewer.prototype._buildRowForMetric): Don't try to render null or NaN.
+
+2018-01-17  Ryosuke Niwa  <rniwa@webkit.org>
+
         Fix perf dashboard tests for node v8
         https://bugs.webkit.org/show_bug.cgi?id=181782
 
